--- a/src/main/webapp/styles/savings.css
+++ b/src/main/webapp/styles/savings.css
@@ -3,17 +3,48 @@
     height:50px;
 }
 body{
-    margin:50px;
-    padding:0;
-  background: url(images/bodybg.jpg) no-repeat ;
-  background-size: cover;
+    background-image: url("../images/bgnew1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    /*background-size:contain;*/
+}
+#bodymain{
+  margin:50px;
+  padding:20px;
   border-radius:10px;
   font-family:"AirbnbCerealMedium";
-  text-color:#6e6f7d;
-}
+  color:#6e6f7d;
 
+}
+#navmain{
+    border-radius: 10px;
+        margin: 50px;
+      font-family:"AirbnbCerealMedium";
+      color:#6e6f7d;
+}
+#navmain a{
+color:#6e6f7d;
+}
+#sidebarmain{
+border-right:1px solid #6e6f7d;
+}
+#sidebarmain nav a{
+color:#6e6f7d;
+}
 #sidebarmain nav a:hover{
     background:white;
     border:5px;
     color:#2d8bfe;
+    border-radius:10px;
+}
+#userimg{
+width:50px;
+height:50px;
+border-radius:50%;
+}
+#logo{
+    color:#6e6f7d;
+    font-size: large;
+    font-weight: bold;
 }
